# Redshift_Analytics

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  advancements.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
configs/: app.yaml
configs/sql/duckdb/: 001_create_tables.sql
docs/: api.md  architecture.md  configuration.md  kafka.md
src/: __init__.py  main.py  pipeline.py  server.py
src/common/: settings.py
src/consumers/: __init__.py  redshift_loader.py
src/producer/: __init__.py
src/storage/: redshift_client.py
src/ui/: app.py  index.html
src/ui/components/: queries.py  streaming.py
src/ui/pages/: 1_live_dashboard.py  2_historical_dashboard.py  3_top_queries.py
tests/: test_metrics_calc.py  test_rollups_sql.py  test_schema_validation.py  test_time_scale.py
